--- a/app/src/main/res/layout/activity_my.xml
+++ b/app/src/main/res/layout/activity_my.xml
@@ -9,22 +9,6 @@
     tools:context=".MyActivity">
 
 
-    <TextView
-        android:text="Status"
-        android:layout_width="wrap_content"
-        android:id="@+id/status"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/ok"
-        android:layout_alignStart="@+id/userName" />
-
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Create user"
-        android:id="@+id/ok"
-        android:onClick="onClick"
-        android:layout_alignParentEnd="true" />
-
     <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -33,8 +17,8 @@
         android:ems="10"
         android:id="@+id/userName"
         android:layout_alignParentTop="true"
-        android:layout_toStartOf="@+id/ok"
-        />
+        android:layout_alignParentStart="true"
+        android:layout_alignEnd="@+id/listView" />
 
     <ListView
         android:layout_width="wrap_content"
@@ -42,6 +26,26 @@
         android:id="@+id/listView"
         android:layout_alignParentBottom="true"
         android:layout_alignParentEnd="true"
-        android:layout_below="@+id/status" />
+        android:layout_below="@+id/exit"
+        android:layout_marginTop="12dp"/>
+
+    <Button
+        android:layout_width="150dp"
+        android:layout_height="wrap_content"
+        android:text="Exit"
+        android:onClick="exit"
+        android:id="@+id/exit"
+        android:layout_below="@+id/userName"
+        android:layout_alignParentStart="true" />
+
+    <Button
+        android:layout_width="150dp"
+        android:layout_height="wrap_content"
+        android:text="Create user"
+        android:id="@+id/ok"
+        android:onClick="create"
+        android:layout_toEndOf="@+id/exit"
+        android:layout_above="@+id/listView"
+        android:layout_alignEnd="@+id/userName" />
 
 </RelativeLayout>
