--- a/app/src/main/res/layout/dialog_game_request.xml
+++ b/app/src/main/res/layout/dialog_game_request.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:weightSum="1">
 
@@ -19,22 +20,25 @@
         android:paddingRight="0dp"/>
 
     <Button
-        android:layout_width="130dp"
+        android:layout_width="117dp"
         android:layout_height="35dp"
         android:text="OK"
+        android:onClick="accept"
         android:id="@+id/ok"
         android:layout_gravity="center_horizontal"
-        android:layout_below="@+id/textView"
+        android:layout_alignTop="@+id/cancel"
         android:layout_alignParentEnd="true"
-        android:layout_marginTop="66dp" />
+        android:layout_marginRight="27dp" />
 
     <Button
-        android:layout_width="117dp"
+        android:layout_width="110dp"
         android:layout_height="36dp"
         android:text="Cancel"
         android:id="@+id/cancel"
         android:onClick="exit"
         android:layout_gravity="center_horizontal"
-        android:layout_alignTop="@+id/ok"
-        android:layout_alignParentStart="true" />
+        android:layout_marginLeft="27dp"
+        android:layout_below="@+id/textView"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="60dp" />
 </RelativeLayout>
